fix the bug of generate topic using pdf